crates/swc_ecma_parser/tests/test262-error-references/fail/f095a5180aa287d1.js.stderr
error: Invalid string escape
 --> $DIR/tests/test262-parser/fail/f095a5180aa287d1.js:1:2
  |
1 | '\
  |  ^

